--- a/Public/signup.html
+++ b/Public/signup.html
@@ -90,9 +90,12 @@
             </div>
         </div>
     </section>
-    <section id="user-input">
+    <section id="user-signup">
+        <!--SCRIPTS-->
+        <script src="./js/index.js"></script>
+        <script src="./js/user-model.js"></script>
         <div class="container text-center signup">
-            <form>
+            <form action="./index.html">
                 <label for="username">Username</label><br>
                 <input type="text" id="username"><br>
                 <label for="email">Email</label><br>
@@ -101,6 +104,7 @@
                 <input type="text" id="password"><br>
                 <label for="passwd-conf">Confirm Password</label><br>
                 <input type="text" id="password-conf"><br>
+                <input onclick="passCheck(), addUser()" type="submit" value="Submit">
             </form>
         </div>
     </section>
