--- a/Public/signup.html
+++ b/Public/signup.html
@@ -105,6 +105,7 @@
                 <label for="passwd-conf">Confirm Password</label><br>
                 <input type="text" id="password-conf"><br>
                 <input onclick="passCheck(), addUser()" type="submit" value="Submit">
+                <p id="result"></p>
             </form>
         </div>
     </section>
