WIP TypeError: Cannot read property 'findOne' of undefined

--- a/Public/about.html
+++ b/Public/about.html
@@ -83,7 +83,7 @@
             </div>
             <!--NAV BAR-->
             <div class="sidenav">
-                <a class="btn btn-dark" href="/home" role="button">Home</a>
+                <a class="btn btn-dark" href="/" role="button">Home</a>
                 <a class="btn btn-dark" href="/signup" role="button">Sign up</a>
                 <!--<a class="btn btn-dark" href="./recovery.html" role="button">Support</a>-->
                 <a class="btn btn-dark" href="/about" role="button">About</a>
