--- a/Public/login.html
+++ b/Public/login.html
@@ -91,10 +91,8 @@
         </div>
     </section>
     <section id="user-signup">
-        <!--SCRIPTS-->
-        <script src="./controllers/account.js"></script>
         <div class="container text-center signup">
-            <form action="./index.html">
+            <form action="/user/login" method="POST" enctype="text/html">
                 <label for="username">Username</label><br>
                 <input type="text" id="username"><br>
                 <label for="password">Password</label><br>
