--- a/Public/signup.html
+++ b/Public/signup.html
@@ -95,7 +95,7 @@
         <div class="container text-center signup">
             <form action="/user/signup" method="POST" enctype="text/html">
                 <label for="username">Username</label><br>
-                <input name="username" text" id="username"><br>
+                <input name="username" type="text" id="username"><br>
                 <label for="email">Email</label><br>
                 <input name="email" type="text" id="email"><br>
                 <label for="password">Password</label><br>
