--- a/Public/errors.html
+++ b/Public/errors.html
@@ -75,22 +75,21 @@
 </head>
 
 <body>
-    <!--TOP BANNER-->
-    <section id="top-banner">
-        <div class="container-fluid">
-            <div class="jumbotron jumbotron-fluid">
-                <h1 style="text-align: center;">Forget your password?</h1>
-                <p style="text-align: center;">Enter your username below and we will send you a link to get your password back</p>
-            </div>
-            <!--NAV BAR-->
-            <div class="sidenav">
-                <a class="btn btn-dark" href="/home" role="button">Home</a>
-                <a class="btn btn-dark" href="/signup" role="button">Sign up</a>
-                <!--<a class="btn btn-dark" href="./recovery.html" role="button">Support</a>-->
-                <a class="btn btn-dark" href="/about" role="button">About</a>
-            </div>
+    <div class="container-fluid">
+        <div class="jumbotron jumbotron-fluid">
+            <h1 style="text-align: center;">Your passwords didn't match</h1>
+            <p style="text-align: center;">Please go back to the signup page</p>
+            <a style="text-align: center;" class="btn btn-dark" href="/signup" role="button">Sign up</a>
+            <!--<a id="verus" role="button" class="btn btn-dark">PvP</a>-->
+            <!--<a id="single-player" role="button" class="btn btn-dark" href="/computer">Computer</a>-->
+            <!--<p style="text-align: center;">Login in or sign up to play</p>-->
         </div>
-    </section>
+        <!--<div class="sidenav">
+            <a class="btn btn-dark" href="/" role="button">Home</a>
+            <a class="btn btn-dark" href="./recovery.html" role="button">Support</a>
+            <a class="btn btn-dark" href="/about" role="button">About</a>
+        </div>-->
+    </div>
 </body>
 
 </html>
