--- a/Public/signup.html
+++ b/Public/signup.html
@@ -3,8 +3,8 @@
 
 <head>
     <!--<style>
-        @import url("bootstrap.min.css");
-        @import url("bootstrap-theme.css");
+        /*@import url("bootstrap.min.css");
+        @import url("bootstrap-theme.css");*/
         body {
             margin-top: auto;
             background-color: black;
@@ -67,8 +67,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--BOOTSTRAP-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!--<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>-->
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!--CUSTOM CSS AND IMPORTS-->
     <link rel="icon" href="./favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/mystyle.css">
@@ -91,7 +91,7 @@
         </div>
     </section>
     <section id="user-signup">
-        <!--SCRIPTS-->
+        <!--USER FORMS-->
         <div class="container text-center signup">
             <form action="/user/signup" method="POST" enctype="text/html">
                 <label for="username">Username</label><br>
@@ -100,8 +100,8 @@
                 <input name="email" type="text" id="email"><br>
                 <label for="password">Password</label><br>
                 <input name="password" type="text" id="password"><br>
-                <label for="password-conf">Confirm Password</label><br>
-                <input name="password-conf" type="text" id="password-conf"><br>
+                <label for="passconf">Confirm Password</label><br>
+                <input name="passconf" type="text" id="passconf"><br>
                 <input type="submit" value="Submit">
             </form>
         </div>
