--- a/Public/comp.html
+++ b/Public/comp.html
@@ -71,7 +71,8 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
     <!--CUSTOM CSS AND IMPORTS-->
     <link rel="icon" href="./favicon.ico">
-    <link rel="stylesheet" type="text/css" href="css/mystyle.css">
+    <link rel="stylesheet" type="text/css" href="css/standard.css">
+    <link rel="stylesheet" type="text/css" href="css/game.css">
 </head>
 
 <body>
@@ -91,25 +92,59 @@
             </div>
         </div>
     </section>
-    <section id="ttt_board">
-        <div class="container-fluid game-container text-center">
-            <div class="game--container">
-                <div data-cell-index="0" class="cell"></div>
-                <div data-cell-index="1" class="cell"></div>
-                <div data-cell-index="2" class="cell"></div>
-                <div data-cell-index="3" class="cell"></div>
-                <div data-cell-index="4" class="cell"></div>
-                <div data-cell-index="5" class="cell"></div>
-                <div data-cell-index="6" class="cell"></div>
-                <div data-cell-index="7" class="cell"></div>
-                <div data-cell-index="8" class="cell"></div>
-            </div>
+
+    <section id="popup-container">
+        <div class="popup">
+          <span class="helper"></span>
+          <div>
+            <div id="popup-close">&times;</div>
+            <p id="popup-text">Player One Wins!</p>
+          </div>
         </div>
-        <h2 class="game-status"></h2>
-        <button class="text-center btn btn-dark game--restart">Restart Game</button>
+      </section>
+    
+    <section class="container">
+        <div class=" game--container gameboard">
+            <div id="square-0" class="square"><div>
+            <div id="square-1" class="square"></div>
+            <div id="square-2" class="square"></div>
+            <div id="square-3" class="square"></div>
+            <div id="square-4" class="square"></div>
+            <div id="square-5" class="square"></div>
+            <div id="square-6" class="square"></div>
+            <div id="square-7" class="square"></div>
+            <div id="square-8" class="square"></div>
+        </div>
     </section>
+
+    <section class="player-container">
+        <div id="player-one" class="score-labels">
+          PLAYER (X)<br>0
+        </div>
+        <div id="tie" class="score-labels">
+          TIE<br>0
+        </div>
+        <div id="player-two" class="score-labels">
+          COMPUTER (O)<br>0
+        </div>
+        <div class="player-icon-container">
+          <div id="num-of-players">
+            <i class="fas fa-user btn show" id="one-player"></i>
+            <i class="fas fa-user-friends btn hidden" id="two-player"></i>
+          </div>
+          <p id="player-label">1P</p>
+        </div>
+      </section>
+    
+      <section class='audio'>
+        <audio src="./sounds/onload.mp3" autoplay="true" id="refresh-audio"></audio>
+        <audio src="./sounds/player-change.mp3" id="player-select-audio"></audio>
+        <audio src="./sounds/player1.mp3" id="set-piece-sound"></audio>
+        <audio src="./sounds/end-round.mp3" id="end-round-sound"></audio>
+      </section>
     <!--SCRIPTS-->
-    <script src="./js/tictactoe.js"></script>
+    <script src="https://kit.fontawesome.com/b61ef1ecc4.js" crossorigin="anonymous"></script>
+    <script src="./js/main.js"></script>
 </body>
 
 </html>
