WIP Gameboard not working

--- a/Public/comp.html
+++ b/Public/comp.html
@@ -92,19 +92,9 @@
             </div>
         </div>
     </section>
-
-    <section id="popup-container">
-        <div class="popup">
-          <span class="helper"></span>
-          <div>
-            <div id="popup-close">&times;</div>
-            <p id="popup-text">Player One Wins!</p>
-          </div>
-        </div>
-      </section>
     
     <section class="container">
-        <div class=" game--container gameboard">
+        <div class="gameboard">
             <div id="square-0" class="square"><div>
             <div id="square-1" class="square"></div>
             <div id="square-2" class="square"></div>
