--- a/Public/comp.html
+++ b/Public/comp.html
@@ -96,19 +96,19 @@
         <div class="gameboard">
             <table id="game-table">
                 <tr>
-                    <th><div class="square" id="square-0"></div></th>
-                    <th><div class="square" id="square-1"></div></th>
-                    <th><div class="square" id="square-2"></div></th>
+                    <th><div class="square" id="square-0"><button id="cell-0" class="btn game-button"></button></div></th>
+                    <th><div class="square" id="square-1"><button id="cell-1" class="btn game-button"></button></div></th>
+                    <th><div class="square" id="square-2"><button id="cell-2" class="btn game-button"></button></div></th>
                 </tr>
                 <tr>
-                    <th><div class="square" id="square-3"></div></th>
-                    <th><div class="square" id="square-4"></div></th>
-                    <th><div class="square" id="square-5"></div></th>
+                    <th><div class="square" id="square-3"><button id="cell-3" class="btn game-button"></button></div></th>
+                    <th><div class="square" id="square-4"><button id="cell-4" class="btn game-button"></button></div></th>
+                    <th><div class="square" id="square-5"><button id="cell-5" class="btn game-button"></button></div></th>
                 </tr>
                 <tr>
-                    <th><div class="square" id="square-6"></div></th>
-                    <th><div class="square" id="square-7"></div></th>
-                    <th><div class="square" id="square-8"></div></th>
+                    <th><div class="square" id="square-6"><button id="cell-6" class="btn game-button"></button></div></th>
+                    <th><div class="square" id="square-7"><button id="cell-7" class="btn game-button"></button></div></th>
+                    <th><div class="square" id="square-8"><button id="cell-8" class="btn game-button"></button></div></th>
                 </tr>
             </table>
         </div>
@@ -131,17 +131,11 @@
           </div>
           <p id="player-label">1P</p>
         </div>
-      </section>
-    
-      <section class='audio'>
-        <audio src="./sounds/onload.mp3" autoplay="true" id="refresh-audio"></audio>
-        <audio src="./sounds/player-change.mp3" id="player-select-audio"></audio>
-        <audio src="./sounds/player1.mp3" id="set-piece-sound"></audio>
-        <audio src="./sounds/end-round.mp3" id="end-round-sound"></audio>
-      </section>
+    </section>
+
     <!--SCRIPTS-->
     <script src="https://kit.fontawesome.com/b61ef1ecc4.js" crossorigin="anonymous"></script>
-    <script src="./js/bundle.js"></script>
+    <script src="js/main.js"></script>
 </body>
 
 </html>
