WIP Login? Maybe? help me plzzz

--- a/Public/comp.html
+++ b/Public/comp.html
@@ -72,6 +72,7 @@
     <!--CUSTOM CSS AND IMPORTS-->
     <link rel="icon" href="./favicon.ico">
     <link rel="stylesheet" type="text/css" href="css/standard.css">
+    <link rel="stylesheet" type="text/css" href="css/game.css">
 </head>
 
 <body>
@@ -79,15 +80,25 @@
     <section id="top-banner">
         <div class="container-fluid">
             <div class="jumbotron jumbotron-fluid text-center">
-                <h1>Single Player</h1>
-                <p>You are X's</p>
-            </div>
-            <!--NAV BAR-->
-            <div class="sidenav">
-                <a class="btn btn-dark" href="/" role="button">Home</a>
-                <a class="btn btn-dark" href="/signup" role="button">Sign up</a>
-                <!--<a class="btn btn-dark" href="./recovery.html" role="button">Support</a>-->
-                <a class="btn btn-dark" href="/about" role="button">About</a>
+                <div class="row">
+                    <div class="col col-md-2">
+                        <!--NAV BAR-->
+                        <div class="sidenav">
+                            <a class="btn btn-dark" href="/" role="button">Home</a>
+                            <a class="btn btn-dark" href="/login" role="button">Login</a>
+                            <a class="btn btn-dark" href="/signup" role="button">Sign up</a>
+                            <!--<a class="btn btn-dark" href="./recovery.html" role="button">Support</a>-->
+                            <a class="btn btn-dark" href="/about" role="button">About</a>
+                        </div>
+                    </div>
+                    <div class="col-md">
+                        <h1>Single Player</h1>
+                        <p>You are X's</p>
+                    </div>
+                    <div class="col col-md-2">
+
+                    </div>
+                </div>
             </div>
         </div>
     </section>
