--- a/Public/index.html
+++ b/Public/index.html
@@ -75,20 +75,31 @@
 </head>
 
 <body>
+   <!--TOP BANNER-->
+   <section id="top-banner">
     <div class="container-fluid">
-        <div class="jumbotron jumbotron-fluid">
-            <h1 style="text-align: center;">Let's play Tic Tac Toe!</h1>
-            <!--<a id="verus" role="button" class="btn btn-dark">PvP</a>-->
-            <a id="single-player" role="button" class="btn btn-dark" href="/computer">Computer</a>
-            <!--<p style="text-align: center;">Login in or sign up to play</p>-->
-        </div>
-        <div class="sidenav">
-            <a class="btn btn-dark" href="/" role="button">Home</a>
-            <a class="btn btn-dark" href="/signup" role="button">Sign up</a>
-            <!--<a class="btn btn-dark" href="./recovery.html" role="button">Support</a>-->
-            <a class="btn btn-dark" href="/about" role="button">About</a>
+        <div class="jumbotron jumbotron-fluid text-center">
+            <div class="row">
+                <div class="col col-md-2">
+                    <!--NAV BAR-->
+                    <div class="sidenav">
+                        <a class="btn btn-dark" href="/" role="button">Home</a>
+                        <a class="btn btn-dark" href="/login" role="button">Login</a>
+                        <a class="btn btn-dark" href="/signup" role="button">Sign up</a>
+                        <!--<a class="btn btn-dark" href="./recovery.html" role="button">Support</a>-->
+                        <a class="btn btn-dark" href="/about" role="button">About</a>
+                    </div>
+                </div>
+                <div class="col-md">
+                    <h1>Tic Tac Toe</h1>
+                </div>
+                <div class="col col-md-2">
+
+                </div>
+            </div>
         </div>
     </div>
+</section>
 </body>
 
 </html>
