--- a/Public/login.html
+++ b/Public/login.html
@@ -1,8 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 
-<head>
-    <!--<style>
+    <head>
+        <!--<style>
         /*@import url("bootstrap.min.css");
         @import url("bootstrap-theme.css");*/
         body {
@@ -62,54 +61,56 @@
             }
         }
     </style>-->
-    <title>Tic Tac Toe</title>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <!--BOOTSTRAP-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
-    <!--CUSTOM CSS AND IMPORTS-->
-    <link rel="icon" href="./favicon.ico">
-    <link rel="stylesheet" type="text/css" href="css/standard.css">
-</head>
+        <title>Tic Tac Toe</title>
+        <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <!--BOOTSTRAP-->
+        <link rel="stylesheet" type="text/css" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+        <!--CUSTOM CSS AND IMPORTS-->
+        <link rel="icon" href="./favicon.ico">
+        <link rel="stylesheet" type="text/css" href="./css/standard.css">
+    </head>
 
-<body>
-    <!--TOP BANNER-->
-    <section id="top-banner">
-        <div class="container-fluid">
-            <div class="jumbotron jumbotron-fluid text-center">
-                <div class="row">
-                    <div class="col col-md-2">
-                        <!--NAV BAR-->
-                        <div class="sidenav">
-                            <a class="btn btn-dark" href="/" role="button">Home</a>
-                            <a class="btn btn-dark" href="/login" role="button">Login</a>
-                            <a class="btn btn-dark" href="/signup" role="button">Sign up</a>
-                            <!--<a class="btn btn-dark" href="./recovery.html" role="button">Support</a>-->
-                            <a class="btn btn-dark" href="/about" role="button">About</a>
+    <body>
+        <!--TOP BANNER-->
+        <section id="top-banner">
+            <div class="container-fluid">
+                <div class="jumbotron jumbotron-fluid text-center">
+                    <div class="row">
+                        <div class="col col-md-2">
+                            <!--NAV BAR-->
+                            <div class="sidenav">
+                                <a class="btn btn-dark" href="/" role="button">Home</a>
+                                <a class="btn btn-dark" href="/login" role="button">Login</a>
+                                <a class="btn btn-dark" href="/signup" role="button">Sign up</a>
+                                <!--<a class="btn btn-dark" href="./recovery.html" role="button">Support</a>-->
+                                <a class="btn btn-dark" href="/about" role="button">About</a>
+                            </div>
                         </div>
-                    </div>
-                    <div class="col-md">
-                        <h1>Login</h1>
-                    </div>
-                    <div class="col col-md-2">
+                        <div class="col-md">
+                            <h1>Login</h1>
+                        </div>
+                        <div class="col col-md-2">
 
+                        </div>
                     </div>
                 </div>
             </div>
-        </div>
-    </section>
-    <section id="user-login">
-        <div class="container text-center signup">
-            <form action="/user/login" method="POST" enctype="text/html">
-                <label for="userID">Username or Email</label><br>
-                <input name="userID" type="text" id="userID"><br>
-                <label for="password">Password</label><br>
-                <input name="password" type="text" id="password"><br>
-                <input type="submit" value="Submit">
-                <p id="result"></p>
-            </form>
-        </div>
-    </section>
-</body>
+        </section>
+        <section id="user-login">
+            <div class="container text-center signup">
+                <form action="/user/login" method="POST" enctype="text/html">
+                    <label for="userID">Username or Email</label><br>
+                    <input name="userID" type="text" id="userID"><br>
+                    <label for="password">Password</label><br>
+                    <input name="password" type="text" id="password"><br>
+                    <input type="submit" value="Submit">
+                    <p id="result"></p>
+                </form>
+            </div>
+        </section>
+    </body>
+
+</html>
