Login in works, css an game needs work

--- a/Public/index.html
+++ b/Public/index.html
@@ -91,9 +91,9 @@
                 </div>
                 <div class="col-md">
                     <h1>Tic Tac Toe</h1>
+                    <a class="btn btn-dark" href="/computer" role="button">computer</a>
                 </div>
                 <div class="col col-md-2">
-
                 </div>
             </div>
         </div>
