--- a/Public/about.html
+++ b/Public/about.html
@@ -66,31 +66,43 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--BOOTSTRAP-->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/js/bootstrap.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <!--CUSTOM CSS AND IMPORTS-->
     <link rel="icon" href="./favicon.ico">
-    <link rel="stylesheet" type="text/css" href="css/standard.css">
+    <link rel="stylesheet" type="text/css" href="/css/standard.css">
 </head>
 
 <body>
     <!--TOP BANNER-->
     <section id="top-banner">
-        <div class="container-fluid">
-            <div class="jumbotron jumbotron-fluid">
-                <h1 style="text-align: center;">About Me!</h1>
-            </div>
-            <!--NAV BAR-->
-            <div class="sidenav">
-                <a class="btn btn-dark" href="/" role="button">Home</a>
-                <a class="btn btn-dark" href="/signup" role="button">Sign up</a>
-                <!--<a class="btn btn-dark" href="./recovery.html" role="button">Support</a>-->
-                <a class="btn btn-dark" href="/about" role="button">About</a>
-            </div>
-        </div>
-    </section>
-</body>
+     <div class="container-fluid">
+         <div class="jumbotron jumbotron-fluid text-center">
+             <div class="row">
+                 <div class="col col-md-2">
+                     <!--NAV BAR-->
+                     <div class="sidenav">
+                         <a class="btn btn-dark" href="/" role="button">Home</a>
+                         <a class="btn btn-dark" href="/login" role="button">Login</a>
+                         <a class="btn btn-dark" href="/signup" role="button">Sign up</a>
+                         <!--<a class="btn btn-dark" href="./recovery.html" role="button">Support</a>-->
+                         <a class="btn btn-dark" href="/about" role="button">About</a>
+                     </div>
+                 </div>
+                 <div class="col-md">
+                     <h1>Tic Tac Toe</h1>
+                     <a class="btn btn-dark" href="/Computer" role="button">computer</a>
+                 </div>
+                 <div class="col col-md-2">
+                 </div>
+             </div>
+         </div>
+     </div>
+ </section>
+ </body>
 
 
 </html>
