--- a/Public/login.html
+++ b/Public/login.html
@@ -101,14 +101,26 @@
         </section>
         <section id="user-login">
             <div class="container text-center signup">
-                <form action="/user/login" method="POST" enctype="text/html">
+                <form">
                     <label for="userID">Username or Email</label><br>
                     <input name="userID" type="text" id="userID"><br>
                     <label for="password">Password</label><br>
                     <input name="password" type="text" id="password"><br>
-                    <input type="submit" value="Submit">
+                    <input type="submit" value="Submit" onclick="logintest(document.getElementById('userID'), document.getElementById('password'))">
                     <p id="result"></p>
                 </form>
+                <script>
+                    function logintest(user, password){
+                        fetch('http://127.0.0.1:69/api/login?user='+user+'&password='+password).then(response => response.json()).then(result => {
+                            if(result.user == "Valid"){
+                                //console.log(result.user = "Valid")
+                                window.location.href = "http://127.0.0.1:69/computer";
+                            }else{
+                                window.location.href = "http://127.0.0.1:69/login";
+                            }
+                        })
+                    }
+                </script>
             </div>
         </section>
     </body>
