trying to make a heroku app

--- a/Public/login.html
+++ b/Public/login.html
@@ -106,7 +106,7 @@
                 <label for="userID">Username or Email</label><br>
                 <input name="userID" type="text" id="userID"><br>
                 <label for="password">Password</label><br>
-                <input name="password" type="text" id="password"><br>
+                <input name="password" type="password" id="password"><br>
                 <input type="submit" value="Submit">
                 <p id="result"></p>
             </form>
