--- a/Public/signup.html
+++ b/Public/signup.html
@@ -107,11 +107,11 @@
                 <label for="username">Username</label><br>
                 <input name="username" type="text" id="username"><br>
                 <label for="email">Email</label><br>
-                <input name="email" type="text" id="email"><br>
+                <input name="email" type="email" id="email"><br>
                 <label for="password">Password</label><br>
-                <input name="password" type="text" id="password"><br>
+                <input name="password" type="password" id="password"><br>
                 <label for="passconf">Confirm Password</label><br>
-                <input name="passconf" type="text" id="passconf"><br>
+                <input name="passconf" type="password" id="passconf"><br>
                 <input type="submit" value="Submit">
             </form>
         </div>
